--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -205,7 +205,7 @@
             }
         }
     
-        document.getElementById("languageSelector").addEventListener("change", changeLanguage);
+        // document.getElementById("languageSelector").addEventListener("change", changeLanguage);
     </script>
 
     <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>    
