--- a/templates/base/career.html
+++ b/templates/base/career.html
@@ -16,7 +16,7 @@
                 <div class="card-body text-start">
                     <ul>
                         {% for job in jobs %}
-                            <li>
+                            <li class="mb-3">
                                 <strong>{{ job.title }}</strong> - {{ job.description }}
                             </li>
                         {% empty %}
