Updated Project Name

--- a/templates/base/about.html
+++ b/templates/base/about.html
@@ -1,11 +1,11 @@
 {% extends 'base/base.html' %}
 
-{% block title %}About Us - Wesalvatore{% endblock %}
+{% block title %}About Us - Wesalvator{% endblock %}
 
 {% block content %}
 <div class="container py-5">
-    <h1 class="text">About Wesalvatore</h1>
-    <p class="lead">Wesalvatore is committed to rescuing and providing loving homes for animals in need. We work alongside dedicated volunteers and organizations to ensure the welfare of animals in our community.</p>
+    <h1 class="text">About Wesalvator</h1>
+    <p class="lead">Wesalvator is committed to rescuing and providing loving homes for animals in need. We work alongside dedicated volunteers and organizations to ensure the welfare of animals in our community.</p>
 
     <div class="row">
         <div class="col-md-6 mb-4">
