--- a/templates/base/contact_us.html
+++ b/templates/base/contact_us.html
@@ -1,6 +1,6 @@
 {% extends 'base/base.html' %}
 
-{% block title %}Contact Us - Wesalvatore{% endblock %}
+{% block title %}Contact Us - Wesalvator{% endblock %}
 
 {% block content %}
 <div class="container">
@@ -39,7 +39,7 @@
                     <h3>Contact Information</h3>
                 </div>
                 <div class="card-body text-start">
-                    <p>Email: <a href="mailto:{{ contact_email }}">contact@wesalvatore.com</a></p>
+                    <p>Email: <a href="mailto:{{ contact_email }}">contact@wesalvator.com</a></p>
                 </div>
             </div>
         </div>
