--- a/templates/base/team.html
+++ b/templates/base/team.html
@@ -1,11 +1,11 @@
 {% extends 'base/base.html' %}
 
-{% block title %}Meet the Team - Wesalvatore{% endblock %}
+{% block title %}Meet the Team - Wesalvator{% endblock %}
 
 {% block content %}
 <div class="container">
     <h1>Meet Our Team</h1>
-    <p class="lead">Our dedicated team is the heart of Wesalvatore, working tirelessly to help animals in need.</p>
+    <p class="lead">Our dedicated team is the heart of Wesalvator, working tirelessly to help animals in need.</p>
 
     <div class="row">
         <div class="col-md-4 mb-4">
@@ -15,7 +15,7 @@
                 </div>
                 <div class="card-body text-start">
                     <p>Founder & CEO</p>
-                    <p>John is passionate about animal welfare and is leading Wesalvatore's mission to save lives.</p>
+                    <p>John is passionate about animal welfare and is leading Wesalvator's mission to save lives.</p>
                 </div>
             </div>
         </div>
