--- a/templates/base/career.html
+++ b/templates/base/career.html
@@ -1,6 +1,6 @@
 {% extends 'base/base.html' %}
 
-{% block title %}Career - Wesalvatore{% endblock %}
+{% block title %}Career - Wesalvator{% endblock %}
 
 {% block content %}
 <div class="container">
@@ -32,7 +32,7 @@
                     <h3>How to Apply</h3>
                 </div>
                 <div class="card-body text-start">
-                    <p>Send your resume to <a href="mailto:careers@wesalvatore.com">careers@wesalvatore.com</a></p>
+                    <p>Send your resume to <a href="mailto:careers@wesalvatore.com">careers@wesalvator.com</a></p>
                 </div>
             </div>
         </div>
