--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -82,7 +82,7 @@
                                 <i class="fas fa-crown me-1"></i>
                                 Premium
                             </a>
-                        </li>
+                        </li>                        
                     {% endif %}
                 </ul>
 
@@ -105,6 +105,7 @@
 
                     <!-- User Menu -->
                     {% if user.is_authenticated %}
+                        
                         <div class="nav-item dropdown">
                             <a class="nav-link" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="fas fa-user"></i>
@@ -134,6 +135,12 @@
             </div>
         </div>
     </nav>
+
+    {% if user.is_authenticated %}
+        <div id="chat-widget-container" style="position: fixed; z-index: 100000;">
+            {% include 'chatbot/chat_widget.html' with chat_history=chat_history %}
+        </div>
+    {% endif %}
 
     <!-- Messages -->
     {% if messages %}
@@ -180,6 +187,7 @@
     </footer>
 
     <!-- JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     
     <!-- Custom JavaScript -->
